examples/compiler_errors/row_effects/unsatisfied_row_subset_e422.flx
// expect: compile_error
// expect-error: E300

fn run_needs_io_time(f: (() -> Int with IO, Time)) -> Int with IO, Time {
    f()
}

fn only_io() -> Int with IO {
    print("io")
    1
}

fn main() with IO, Time {
    run_needs_io_time(only_io)
    None
}
